--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,10 @@
             <artifactId>JDA</artifactId>
             <version>5.0.0-beta.3</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
 </project>
