--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,15 @@
             <name>m2-dv8tion</name>
             <url>https://m2.dv8tion.net/releases</url>
         </repository>
+        <repository>
+            <id>central</id>
+            <name>bintray</name>
+            <url>http://jcenter.bintray.com</url>
+        </repository>
+        <repository>
+            <id>chew-m2-snapshots</id>
+            <url>https://m2.chew.pro/snapshots/</url>
+        </repository>
     </repositories>
 
 
@@ -28,6 +37,13 @@
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
             <version>5.0.0-beta.3</version>
+        </dependency>
+        <dependency>
+            <groupId>pw.chew</groupId>
+            <artifactId>jda-chewtils</artifactId>
+            <version>2.0-SNAPSHOT</version>
+            <scope>compile</scope>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>io.github.cdimascio</groupId>
@@ -60,6 +76,7 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.14.2</version>
         </dependency>
+
 
 
 
