--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PREFIX=!!
 BOTID=984469828008026192
 SERVERID=
 APIKEY=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
+TOKEN2=MTA3ODgyNzc5MDkxMDExNTg0OQ.GNb7rX.5c9Qj3fpxYFwQvTIqohfQRuBrAT4y-6isop-Sk
