--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.14.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.rometools</groupId>
+            <artifactId>rome</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
 
 
 
