--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-TOKEN=OTg0NDY5ODI4MDA4MDI2MTky.GAKAh6.yRVOPyHcS40TALQcWXbkg9yaFjt2pTFfnLnjNk
+TOKEN=
 PREFIX=!!
-BOTID=984469828008026192
+BOTID= 
 SERVERID=
-APIKEY=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
-TOKEN2=MTA3ODgyNzc5MDkxMDExNTg0OQ.GNb7rX.5c9Qj3fpxYFwQvTIqohfQRuBrAT4y-6isop-Sk
-BOTID2=1078827790910115849
+APIKEY=
+TOKEN2= #TEST BOTU
+BOTID2= #TEST BOTU
