--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <name>bintray</name>
             <url>http://jcenter.bintray.com</url>
         </repository>
+        <repository>
+            <id>jcenter</id>
+            <name>jcenter</name>
+            <url>https://jcenter.bintray.com/</url>
+        </repository>
+
     </repositories>
 
 
